fixed horizontal scroll

--- a/WebApp/frontend/public/css/navigation.css
+++ b/WebApp/frontend/public/css/navigation.css
@@ -14,7 +14,7 @@
     background: linear-gradient(180deg, #FFF 0%, #F2F2F2 16.67%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(50px);
-
+    box-sizing: border-box;
 }
 
 
@@ -39,6 +39,5 @@ header{
     grid-auto-rows: 1fr;
     column-gap: 8px;
     align-items: center;
-    padding: 0 1rem;
     
 }
